# typhon-rewrite

./: .gitignore  CHANGELOG.md  flake.nix  version.txt
.config/: rustfmt.toml  taplo.toml
.scripts/: build  check  crate2nix-generate  fmt  pg-start  pg-stop  reset-database  serve  ty  update
.scripts/git_hooks/: pre-push
doc/src/: concepts.md  hacking.md  installation.md  introduction.md
lib/: README.md  default.nix  systems.nix  utils.nix
lib/builders/: mkDummyAction.nix
lib/cachix/: mkPush.nix
lib/common/: mkProject.nix
lib/dummy/: mkProject.nix  status.nix  webhook.nix
lib/git/: config.nix
lib/gitea/: mkProject.nix
lib/github/: mkProject.nix
nix/: cargo.nix  jobs.nix  module.nix  nixosTest.nix  outputs.nix  package.nix  recipe.nix  shell.nix  sources.json  sources.nix  treefmt.nix
workspace/: Cargo.toml
workspace/actors/: Cargo.toml
workspace/actors/src/: actors.rs  lib.rs  scopes.rs
workspace/app/: Cargo.toml
workspace/app/src/: lib.rs  prelude.rs
workspace/app/src/components/: mod.rs  projects.rs  sources.rs  widgets.rs
workspace/app/src/pages/: home.rs  mod.rs  project.rs
workspace/cli/: Cargo.toml
workspace/cli/src/: lib.rs  runtime.rs
workspace/cli/src/sources/: args.rs  internal.rs  mod.rs
workspace/core/: Cargo.toml
workspace/core/src/: database.rs  lib.rs  logs.rs  models.rs  permissions.rs  prelude.rs  result.rs  users.rs
workspace/core/src/builds/: actor.rs  mod.rs  models.rs  queue.rs
workspace/core/src/init/: actor.rs  helpers.rs  mod.rs
workspace/core/src/projects/: actor.rs  locks.rs  mod.rs  models.rs
workspace/core/src/tasks/: actor.rs  logs.rs  mod.rs
workspace/nix/: Cargo.toml
workspace/nix/src/: error.rs  eval.rs  lib.rs  main.rs  store.rs  structs.rs
workspace/nix/src/derivations/: mod.rs
workspace/nix/src/sources/: mod.rs  store.rs  types.rs
workspace/pack/: Cargo.toml
workspace/pack/src/: main.rs
workspace/schema/: Cargo.toml
workspace/schema/migrations/00000000_init/: up.sql
workspace/schema/src/: lib.rs  schema.rs
workspace/server/: Cargo.toml
workspace/server/src/: api.rs  main.rs
workspace/types/: Cargo.toml
workspace/types/src/: lib.rs
