[package]
name = "typhon-core"
version.workspace = true
edition.workspace = true

[dependencies]
typhon-actors.workspace = true
typhon-nix.workspace = true
typhon-schema.workspace = true

diesel = { workspace = true, features = ["uuid"] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
either.workspace = true
futures.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
tokio = { workspace = true, features = ["tracing"] }
