[package]
name = "typhon-nix"
version.workspace = true
edition.workspace = true

[dependencies]
typhon-types.workspace = true

nix-daemon.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
# tokio = { workspace = true, features = ["process"] }
tokio = { workspace = true, features = ["full"] }
