[package]
name = "typhon-nix"
version.workspace = true
edition.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["from"] }
git2.workspace = true
nix-daemon.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
# tokio = { workspace = true, features = ["process"] }
tokio = { workspace = true, features = ["full"] }
