[package]
name = "typhon-server"
version.workspace = true
edition.workspace = true

[dependencies]
typhon-app = { workspace = true, features = ["ssr"] }
typhon-core.workspace = true

axum.workspace = true
derive_more = { workspace = true, features = ["from"] }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true
serde.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
